--- a/charts/kwok/conf/kwok.yaml
+++ b/charts/kwok/conf/kwok.yaml
@@ -9,22 +9,13 @@ options:
   podPlayStageParallelism: 4
   nodePlayStageParallelism: 4
   nodePort: 10247
-  cidr: 10.0.0.1/24
+  cidr: 10.0.0.0/12
   manageAllNodes: false
-  manageNodesWithAnnotationSelector: 'kwok.x-k8s.io/node=fake'
+  manageNodesWithAnnotationSelector: ''
   manageNodesWithLabelSelector: ''
   manageSingleNode: ''
   nodeLeaseDurationSeconds: 40
   enableCRDs:
   - Stage
   - Metric
-  - Attach
-  - ClusterAttach
-  - Exec
-  - ClusterExec
-  - Logs
-  - ClusterLogs
-  - PortForward
-  - ClusterPortForward
-  - ResourceUsage
-  - ClusterResourceUsage
+
