--- a/charts/kwok/values.yaml
+++ b/charts/kwok/values.yaml
@@ -4,7 +4,7 @@ image:
   # -- Image repository.
   repository: registry.k8s.io/kwok/kwok
   # -- Overrides the image tag whose default is {{ .Chart.AppVersion }}.
-  tag: ""
+  tag: "v0.7.0"
 
 # -- Image pull secrets.
 imagePullSecrets: []
@@ -13,13 +13,17 @@ imagePullSecrets: []
 nameOverride: ""
 
 # -- Override the `fullname` of the chart.
-fullnameOverride: "kwok-controller"
+fullnameOverride: ""
 
 podSecurityContext: {}
 securityContext: {}
 
 nodeSelector: {}
-resources: {}
+resources:
+  requests:
+    cpu: "10m"
+  limits:
+    cpu: "100m"
 affinity: {}
 
 # -- The replica count for Deployment.
@@ -27,13 +31,15 @@ replicas: 1
 
 # -- Change `hostNetwork` to `true` if you want to deploy in a kind cluster.
 hostNetwork: false
-tolerations:
-- operator: Exists
-  effect: NoSchedule
-  key: node-role.kubernetes.io/control-plane
-- operator: Exists
-  effect: NoSchedule
-  key: node-role.kubernetes.io/master
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: agentpool
+          operator: In
+          values:
+          - user
 volumes: []
 env:
 - name: POD_IP
@@ -44,5 +50,28 @@ env:
   valueFrom:
     fieldRef:
       fieldPath: status.hostIP
+- name: POD_NAME
+  valueFrom:
+    fieldRef:
+      fieldPath: metadata.name
+
 volumeMounts: []
 enableDeployment: true
+
+node:
+  taints:
+  - effect: NoSchedule
+    key: kwok.x-k8s.io/node
+    value: fake
+
+  allocatable:
+    cpu: 96
+    memory: 1Ti
+    pods: 110
+    nvidia.com/gpu: "8"
+
+  capacity:
+    cpu: 96
+    memory: 1Ti
+    pods: 110
+    nvidia.com/gpu: "8"
